[gd_scene load_steps=20 format=2]

[ext_resource path="res://Asset/Interface/MainMenu/DoubleHomicide.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Source/Interface/Inventory/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Asset/Level/Level1/Blueprint.png" type="Texture" id=3]
[ext_resource path="res://Asset/Music/Official BGM (ARTMS Birth).mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
extra_spacing_bottom = -50
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=11]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="Theme" id=8]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_hover = Color( 0.376471, 0.564706, 0.458824, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/fonts/font = SubResource( 11 )
Button/styles/disabled = SubResource( 12 )
Button/styles/focus = SubResource( 13 )
Button/styles/hover = SubResource( 14 )
Button/styles/normal = SubResource( 15 )
Button/styles/pressed = SubResource( 16 )

[sub_resource type="DynamicFont" id=22]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=18]
default_font = SubResource( 22 )
Label/fonts/font = SubResource( 22 )

[sub_resource type="Theme" id=19]

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=21]
default_font = SubResource( 23 )
Button/colors/font_color_hover = Color( 0.376471, 0.564706, 0.458824, 1 )

[node name="MainMenu" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -1095.0
margin_top = -14.0
margin_right = 6905.0
margin_bottom = 2986.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="GameTitle" type="Label" parent="."]
margin_left = 52.0
margin_top = 54.0
margin_right = 366.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 1 )
text = "UNRAVEL
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/fade_out = SubResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 66.0
margin_top = -140.0
margin_right = 180.0
margin_bottom = 81.0

[node name="NewButton" type="Button" parent="VBoxContainer"]
margin_right = 202.0
margin_bottom = 71.0
focus_neighbour_top = NodePath("../QuitButton")
theme = SubResource( 8 )
text = "New"
align = 0

[node name="LoadButton" type="Button" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 202.0
margin_bottom = 146.0
theme = SubResource( 8 )
text = "Load"
align = 0

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 202.0
margin_bottom = 221.0
focus_neighbour_bottom = NodePath("../NewButton")
theme = SubResource( 8 )
text = "Settings"
align = 0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 225.0
margin_right = 202.0
margin_bottom = 296.0
focus_neighbour_bottom = NodePath("../NewButton")
theme = SubResource( 8 )
text = "Quit"
align = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
margin_left = 219.0
margin_top = 197.0
margin_right = 347.0
margin_bottom = 268.0

[node name="SettingLabel" type="Label" parent="VBoxContainer2"]
margin_right = 128.0
margin_bottom = 16.0
theme = SubResource( 18 )
text = "Audio Settings"

[node name="HSlider" type="HSlider" parent="VBoxContainer2"]
margin_top = 20.0
margin_right = 128.0
margin_bottom = 36.0
theme = SubResource( 19 )

[node name="Save" type="Button" parent="VBoxContainer2"]
margin_top = 40.0
margin_right = 128.0
margin_bottom = 62.0
theme = SubResource( 21 )
text = "Save & Exit"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -132.0
margin_top = -136.0
margin_right = 1376.0
margin_bottom = 887.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
